feat: color y seccion

--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 <body>
     <header><img src="/Imagenes/Logo.png" alt="">
     </header>
-    <section class="menu-lateral">
-        <a href="">Todos los productos</a><br><br><br>
-        <a href="">Abrigos</a><br><br><br>
-        <a href="">Camisetas</a><br><br><br>
-        <a href="">Pantalones</a><br><br><br>
-        <br><br><br>
-        <a href="">Carrito</a><br>
-        <br><br>
-    </section>
     <main class="main-container">
-
+        <section class="menu-lateral">
+            <a href="">Todos los productos</a><br><br><br>
+            <a href="">Abrigos</a><br><br><br>
+            <a href="">Camisetas</a><br><br><br>
+            <a href="">Pantalones</a><br><br><br>
+            <br><br>
+            <a href="">Carrito</a><br>
+            <br><br>
+        </section>
+        <section class="productos">    
+            <h2>Abrigos</h2>
+            <section class="cajas">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+                <h1>Abrigo</h1>
+            </section>
+        </section>
     </main>
     <footer>
         <h3 id="autor">@2024 Camper Angel</h3>
