--- a/index.html
+++ b/index.html
@@ -22,8 +22,53 @@
         <section class="productos">    
             <h2>Abrigos</h2>
             <section class="cajas">
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
-                <h1>Abrigo</h1>
+                <div id="chaqueta 1">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+                    <h1>Chaqueta Impermeable En Gabán Para Dama Azul</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                </div>
+                <div id="chaqueta 2">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
+                    <h1>Chaqueta Impermeable En Gabán Para Dama Negro</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                </div>
+                <div id="chaqueta 3">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
+                    <h1>Chaqueta Impermeable En Gabán Para Dama Blanco</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                </div>
+                <div id="chaqueta 4">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
+                    <h1>Chaqueta Hombre Cuero Sintético</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 102000$</h1></a>
+                </div>
+            </section>
+            <h2>Camisetas</h2>
+            <section class="cajas2">
+                <div id="camiseta 1">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
+                    <h1>Camiseta De Compresión En Licra Uv Slim</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 38000$</h1></a>
+                </div>
+                <div id="camiseta 2">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
+                    <h1>Camiseta Tipo Polo Color Dama Mujer</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 26255$</h1></a>
+                </div>
+                <div id="camiseta 3">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
+                    <h1>Camiseta Deportiva, Crossfit, Gym, Ejercicios Al Aire Libre</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 29900$</h1></a>
+                </div>
+                <div id="camiseta 4">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_776916-MCO72088562654_102023-F.webp" alt="">
+                    <h1>Camisetas Bandas De Rock Metal Heavy Riffs</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 32850$</h1></a>
+                </div>
+            </section>
+            <h2>Pantalones</h2>
+            <section class="cajas3">
+
             </section>
         </section>
     </main>
