--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </header>
     <main class="main-container">
         <section class="menu-lateral">
-            <a href="">Todos los productos</a><br><br><br>
-            <a href="">Abrigos</a><br><br><br>
-            <a href="">Camisetas</a><br><br><br>
-            <a href="">Pantalones</a><br><br><br>
+            <a href="/index.html">Todos los productos</a><br><br><br>
+            <a href="/index.html#chaqueta 1">Abrigos</a><br><br><br>
+            <a href="/index.html#camiseta 1">Camisetas</a><br><br><br>
+            <a href="/index.html#pantalon 1">Pantalones</a><br><br><br>
             <br><br>
-            <a href="">Carrito</a><br>
+            <a href="/carrito.html">Carrito</a><br>
             <br><br>
         </section>
         <section class="productos">    
@@ -68,11 +68,31 @@
             </section>
             <h2>Pantalones</h2>
             <section class="cajas3">
-
+                <div id="pantalon 1">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
+                    <h1>Pantalon En Dril Licrado Para Hombre</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 58900$</h1></a>
+                </div>
+                <div id="pantalon 2">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
+                    <h1>Pantalón Camuflado Hermoso Verde</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 104405$</h1></a>
+                </div>
+                <div id="pantalon 3">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_758206-MCO70501309390_072023-F.webp" alt="">
+                    <h1>Pantalón Jogger Cargo, Táctico, Militar</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 104500$</h1></a>
+                </div>
+                <div id="pantalon 4">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_947436-MCO69626235546_052023-F.webp" alt="">
+                    <h1>Pantalón Jeans De Colores Entubado Para Hombre</h1>
+                    <a href=""><h1 id="comprar">Comprar ahora por: 61750$</h1></a>
+                </div>
             </section>
+            <h2></h2>
         </section>
     </main>
-    <footer>
+    <footer class="footer3">
         <h3 id="autor">@2024 Camper Angel</h3>
     </footer>
 </body>
