refactor: :zap: Reestructuracion
Reconstruccion de Index, Carrito y Estilos

--- a/index.html
+++ b/index.html
@@ -7,93 +7,91 @@
     <link rel="stylesheet" href="/estilos.css">
 </head>
 <body>
-    <header><img src="/Imagenes/Logo.png" alt="">
-    </header>
+    <header><img src="/Imagenes/Logo.png" alt=""></header>
     <main class="main-container">
         <section class="menu-lateral">
             <a href="/index.html">Todos los productos</a><br><br><br>
-            <a href="/index.html#chaqueta 1">Abrigos</a><br><br><br>
-            <a href="/index.html#camiseta 1">Camisetas</a><br><br><br>
-            <a href="/index.html#pantalon 1">Pantalones</a><br><br><br>
+            <a href="/index.html#chaqueta1">Abrigos</a><br><br><br>
+            <a href="/index.html#camiseta1">Camisetas</a><br><br><br>
+            <a href="/index.html#pantalon1">Pantalones</a><br><br><br>
             <br><br>
-            <a href="/carrito.html">Carrito</a><br>
-            <br><br>
+            <a href="/carrito.html">Carrito</a><br><br>
         </section>
         <section class="productos">    
             <h2>Abrigos</h2>
             <section class="cajas">
-                <div id="chaqueta 1">
+                <div id="chaqueta1">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
-                    <h1>Chaqueta Impermeable En Gabán Para Dama Azul</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                    <h1>Chaqueta Impermeable En Gabán Para Dama Azul</h1> 
+                    <button class="btn-agregar" data-id="chaqueta1" data-nombre="Chaqueta Impermeable En Gabán Para Dama Azul" data-precio="93900">Agregar al carrito - 93900$</button>
                 </div>
-                <div id="chaqueta 2">
+                <div id="chaqueta2">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
                     <h1>Chaqueta Impermeable En Gabán Para Dama Negro</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                    <button class="btn-agregar" data-id="chaqueta2" data-nombre="Chaqueta Impermeable En Gabán Para Dama Negro" data-precio="93900">Agregar al carrito - 93900$</button>
                 </div>
-                <div id="chaqueta 3">
+                <div id="chaqueta3">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
                     <h1>Chaqueta Impermeable En Gabán Para Dama Blanco</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
+                    <button class="btn-agregar" data-id="chaqueta3" data-nombre="Chaqueta Impermeable En Gabán Para Dama Blanco" data-precio="93900">Agregar al carrito - 93900$</button>
                 </div>
-                <div id="chaqueta 4">
+                <div id="chaqueta4">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
                     <h1>Chaqueta Hombre Cuero Sintético</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 102000$</h1></a>
+                    <button class="btn-agregar" data-id="chaqueta4" data-nombre="Chaqueta Hombre Cuero Sintético" data-precio="93900">Agregar al carrito - 93900$</button>
                 </div>
             </section>
             <h2>Camisetas</h2>
             <section class="cajas2">
-                <div id="camiseta 1">
+                <div id="camiseta1">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
                     <h1>Camiseta De Compresión En Licra Uv Slim</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 38000$</h1></a>
+                    <button class="btn-agregar" data-id="camiseta1" data-nombre="Camiseta De Compresión En Licra Uv Slim" data-precio="30000">Agregar al carrito - 30000$</button>
                 </div>
-                <div id="camiseta 2">
+                <div id="camiseta2">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
                     <h1>Camiseta Tipo Polo Color Dama Mujer</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 26255$</h1></a>
+                    <button class="btn-agregar" data-id="camiseta2" data-nombre="Camiseta Tipo Polo Color Dama Mujer" data-precio="30000">Agregar al carrito - 30000$</button>
                 </div>
-                <div id="camiseta 3">
+                <div id="camiseta3">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
                     <h1>Camiseta Deportiva, Crossfit, Gym, Ejercicios Al Aire Libre</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 29900$</h1></a>
+                    <button class="btn-agregar" data-id="camiseta3" data-nombre="Camiseta Deportiva" data-precio="30000">Agregar al carrito - 30000$</button>
                 </div>
-                <div id="camiseta 4">
+                <div id="camiseta4">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_776916-MCO72088562654_102023-F.webp" alt="">
                     <h1>Camisetas Bandas De Rock Metal Heavy Riffs</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 32850$</h1></a>
+                    <button class="btn-agregar" data-id="camiseta4" data-nombre="Camisetas Bandas De Rock Metal" data-precio="30000">Agregar al carrito - 30000$</button>
                 </div>
             </section>
             <h2>Pantalones</h2>
             <section class="cajas3">
-                <div id="pantalon 1">
+                <div id="pantalon1">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
                     <h1>Pantalon En Dril Licrado Para Hombre</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 58900$</h1></a>
+                    <button class="btn-agregar" data-id="pantalon1" data-nombre="Pantalon En Dril Licrado Para Hombre" data-precio="45000">Agregar al carrito - 45000$</button>
                 </div>
-                <div id="pantalon 2">
+                <div id="pantalon2">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
                     <h1>Pantalón Camuflado Hermoso Verde</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 104405$</h1></a>
+                    <button class="btn-agregar" data-id="pantalon2" data-nombre="Pantalón Camuflado Hermoso Verde" data-precio="45000">Agregar al carrito - 45000$</button>
                 </div>
-                <div id="pantalon 3">
+                <div id="pantalon3">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_758206-MCO70501309390_072023-F.webp" alt="">
                     <h1>Pantalón Jogger Cargo, Táctico, Militar</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 104500$</h1></a>
+                    <button class="btn-agregar" data-id="pantalon3" data-nombre="Pantalón Jogger Cargo" data-precio="45000">Agregar al carrito - 45000$</button>
                 </div>
-                <div id="pantalon 4">
+                <div id="pantalon4">
                     <img src="https://http2.mlstatic.com/D_NQ_NP_2X_947436-MCO69626235546_052023-F.webp" alt="">
                     <h1>Pantalón Jeans De Colores Entubado Para Hombre</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 61750$</h1></a>
+                    <button class="btn-agregar" data-id="pantalon4" data-nombre="Pantalón Jeans De Colores" data-precio="45000">Agregar al carrito - 45000$</button>
                 </div>
             </section>
             <h2></h2>
         </section>
     </main>
     <footer class="footer3">
-        <h3 id="autor">@2024 Camper Angel</h3>
+        <h3 id="autor">@2024 AngelDev</h3>
     </footer>
 </body>
 </html>
