--- a/carrito.html
+++ b/carrito.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Closeth Collection</title>
-    <link rel="stylesheet" href="/estilos.css">
+    <title>Carrito de Compras</title>
+    <link rel="stylesheet" href="carrito.css">
 </head>
 <body>
-    <header><img src="/Imagenes/Logo.png" alt="">
+    <header>
+        <img src="/Imagenes/Logo.png" alt="Logo" class="logo">
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="carrito.html">Carrito</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="main-container">
-        <section class="menu-lateral">
-            <a href="/index.html">Todos los productos</a><br><br><br>
-            <a href="/index.html#chaqueta 1">Abrigos</a><br><br><br>
-            <a href="/index.html#camiseta 1">Camisetas</a><br><br><br>
-            <a href="/index.html#pantalon 1">Pantalones</a><br><br><br>
-            <br><br>
-            <a href="/carrito.html">Carrito</a><br>
-            <br><br>
-        </section>
-        <section class="productos2">    
-            <h2>Abrigos</h2>
-            <section class="cajas2">
-                <div id="chaqueta 1">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
-                    <h1>Chaqueta Impermeable En Gabán Para Dama Azul</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
-                    <a href="/eliminar1.html"><h1 id="comprar">Eliminar</h1></a>
-                </div>
-                <div id="pantalon 2">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
-                    <h1>Pantalón Camuflado Hermoso Verde</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 104405$</h1></a>
-                    <a href=""><h1 id="comprar">Eliminar</h1></a>
-                </div>
-                <div id="chaqueta 3">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
-                    <h1>Chaqueta Impermeable En Gabán Para Dama Blanco</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 93900$</h1></a>
-                    <a href=""><h1 id="comprar">Eliminar</h1></a>
-                </div>
-                <div id="camiseta 3">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
-                    <h1>Camiseta Deportiva, Crossfit, Gym, Ejercicios Al Aire Libre</h1>
-                    <a href=""><h1 id="comprar">Comprar ahora por: 29900$</h1></a>
-                    <a href=""><h1 id="comprar">Eliminar</h1></a>
-                </div>
-            </section>
+        <h1>Carrito de Compras</h1>
+        <div id="carrito-container">
+            <!-- Ejemplo de producto en el carrito -->
+            <div class="producto-en-carrito">
+                <h3>Producto de Ejemplo 1</h3>
+                <span>Precio: 30000$</span>
+                <button>Eliminar</button>
+            </div>
+            <div class="producto-en-carrito">
+                <h3>Producto de Ejemplo 2</h3>
+                <span>Precio: 45000$</span>
+                <button>Eliminar</button>
+            </div>
+        </div>
+        <h2>Total: <span id="total">75000</span> $</h2>
+        <div class="carrito-buttons">
+            <button id="vaciar-carrito">Vaciar Carrito</button>
+            <button id="checkout">Proceder al Pago</button>
+        </div>
     </main>
-    <footer class="footer2">
-        <h3 id="autor">@2024 Camper Angel</h3>
+    <footer class="footer3">
+        <h3 id="autor">@2024 AngelDev</h3>
     </footer>
 </body>
 </html>
